# Hostnexus

./: README.md
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/tests/: conftest.py
backend/tests/api/: test_user.py
frontend/: eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/: i18n.ts  main.tsx
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/pages/: Login.tsx
frontend/src/routes/: AppRouter.tsx  ProtectedRoute.tsx  routes.tsx
hostnexus-backend/: .env  .prettierrc  Cargo.toml  docker-compose.yaml  hostnexus.db  package.json  pnpm-lock.yaml  tsconfig.json
hostnexus-backend/migrations/: 20250723014635_create_users_table.sql
hostnexus-backend/migrations/20250723144850_add_password_and_role_to_users/: down.sql  up.sql
hostnexus-backend/prisma/: schema.prisma
hostnexus-backend/src/: lib.rs  main.rs  main.ts
hostnexus-backend/src/api/: mod.rs  user.rs
hostnexus-backend/src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs
hostnexus-backend/src/core/: core.module.ts
hostnexus-backend/src/core/config/: graphql.config.ts
hostnexus-backend/src/core/prisma/: prisma.service.ts
hostnexus-backend/src/core/redis/: redis.service.ts
hostnexus-backend/src/db/: inet.rs  mod.rs  user.rs
hostnexus-backend/src/models/: mod.rs  user.rs
hostnexus-backend/src/shared/utils/: is-dev.util.ts
hostnexus-backend/src/startup/: init.rs
hostnexus-backend/src/utils/: hash.rs  mod.rs  password.rs
hostnexus-backend/tests/: auth.rs  user.rs
(+5 files in other folders)
