[package]
name = "hostnexus-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
argon2 = "0.5"
chrono = "0.4"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "macros",
] }

[dev-dependencies]
actix-rt = "2"
