[package]
name = "hostnexus-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
argon2 = "0.5"
password-hash = "0.4"
rand_core = "0.6"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "macros",
  "runtime-tokio",
] }
anyhow = "1.0.71"

[dev-dependencies]
actix-rt = "2.7"
